--- a/src/components/Card/style.module.scss
+++ b/src/components/Card/style.module.scss
@@ -10,18 +10,14 @@
     flex-direction: column;
     position: relative;
     top: -25%;
-    height: 500px;
-    width: 1000px;
+    height: 80%;
+    width: 75%;
     border-radius: 25px;
     padding: 50px;
     transform-origin: top;
     @media (max-width: 1024) {
+      width: 1000px;
       max-width: 95%;
-    }
-    h2 {
-      text-align: center;
-      margin: 0px;
-      font-size: 28px;
     }
     .body {
       display: flex;
@@ -41,32 +37,6 @@
         @media (max-width: 1024) {
           width: 100%;
           top: 0%;
-        }
-        p {
-          font-size: 16px;
-          &::first-letter {
-            font-size: 28px;
-            font-family: "Title";
-          }
-          @media (max-width: 1024) {
-            font-size: 10px;
-            &::first-letter {
-              font-size: 10px;
-            }
-          }
-        }
-        span {
-          display: flex;
-          align-items: center;
-          gap: 5px;
-          a {
-            font-size: 12px;
-            text-decoration: underline;
-            cursor: pointer;
-          }
-          @media (max-width: 1024) {
-            margin-bottom: 20px;
-          }
         }
       }
 
@@ -90,9 +60,7 @@
 
         @media (max-width: 1024px) {
           width: 100%;
-          img {
-            object-fit: contain;
-          }
+          margin-top: 20px;
         }
       }
     }
